--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/SevogleAdmin/braid-web-lib#readme",
   "devDependencies": {
+    "browserify": "^14.4.0",
+    "tsify": "^3.0.1",
     "typescript": "^2.3.4"
   }
 }
