--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/SevogleAdmin/braid-web-lib#readme",
   "devDependencies": {
-    "browserify": "^14.4.0",
-    "tsify": "^3.0.1",
-    "typescript": "^2.3.4"
+    "ts-loader": "^2.1.0",
+    "typescript": "^2.3.4",
+    "webpack": "^2.6.1"
   }
 }
