--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,14 @@
 {
   "compilerOptions": {
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "dist",
-    "baseUrl": ".",
+    "allowJs": true,
     "lib": [
       "es2015",
       "dom"
-    ],
-    "paths": {
-      "*": [
-        "node_modules/*",
-        "src/types/*"
-      ]
-    }
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ],
-  "experimentalDecorators": true,
-  "forceConsistentCasingInFileNames": true,
-  "noFallthroughCasesInSwitch": true,
-  "noImplicitReturns": true,
-  "noImplicitThis": true,
-  "noUnusedLocals": true,
-  "pretty": true
+    ]
+  }
 }
